Platform host endpoints added WIP
